--- a/style.css
+++ b/style.css
@@ -67,7 +67,6 @@ li span {
   font-size: 1.8rem;
 }
 
-
 .grid-six {
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 20rem 20rem;
@@ -105,11 +104,11 @@ li span {
   display: block;
 }
 
-.third {
+.cars-third-item {
   transform: scale(1.5) scaleX(-1);
 }
 
-.bgimg {
+.background-img {
   width: 100vw;
   height: 100vh;
   position: absolute;
@@ -126,12 +125,14 @@ li span {
 .grid-six li {
   height: 100%;
   width: 100%;
+  /* tentativa desesperada de centralizar a "div" kkkkkk */
   align-self: center;
   justify-content: center;
   align-items: center;
   place-content: center;
   justify-content: center;
   align-content: center;
+  /*  */
   font-size: 2rem;
   text-align: left;
   padding: 4rem;
